tests/snapshots/examples_fixtures/type_system__96_hm_stage2_generic_module_call_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/96_hm_stage2_generic_module_call_ok.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/type_system/TypeSystem/HmGenericModule.flx:9:9
  |
9 |         push(xs, elem)
  |         ^^^^

Hint:
  Define it first: let push = ...;
== stdout ==
<not executed>
